--- a/4. Tipos de datos complejos.ipynb
+++ b/4. Tipos de datos complejos.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPKeQZ5ukbu8qq1Tb2ehtN",
+      "authorship_tag": "ABX9TyPaVguWKA9z5ZOcbmz7bqac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,6 +521,185 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Funciones"
+      ],
+      "metadata": {
+        "id": "_dImwniSsny9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### len\n",
+        "\n",
+        "Regresa el número de elementos que existen en la lista."
+      ],
+      "metadata": {
+        "id": "Tq7f-sjLfo9V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas_list = [\"mango\", \"durazno\", \"mamey\", \"melón\"]\n",
+        "len(frutas_list)"
+      ],
+      "metadata": {
+        "id": "oSjchKwrftQF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c20ed5fa-31bb-4c01-d0b6-ca94453b9942"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_lista = [1, 2, 3, 4, 5, 6]\n",
+        "len(numeros_lista)"
+      ],
+      "metadata": {
+        "id": "utMpK4otf1Qj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17fbe2f7-8e8e-4d75-a487-9c30a2c4205f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vacio_lista = []\n",
+        "len(vacio_lista)"
+      ],
+      "metadata": {
+        "id": "fBZ9jQOMf7US",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46f4211c-b6aa-4496-d7ae-dac2ce101ee0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Método len"
+      ],
+      "metadata": {
+        "id": "EMuzL1MOmqFB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas_list = [\"mango\", \"durazno\", \"mamey\", \"melón\"]\n",
+        "frutas_list.__len__()"
+      ],
+      "metadata": {
+        "id": "-S156t52mt04",
+        "outputId": "0d295f9c-10a9-4d60-d82a-c3312762fa45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### sum"
+      ],
+      "metadata": {
+        "id": "HnuVlkswtJAX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_list = [2, 3, 4, 1, 10]\n",
+        "sum(numeros_list)"
+      ],
+      "metadata": {
+        "id": "vVXlAnT9tK7W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### max"
+      ],
+      "metadata": {
+        "id": "RRKLxtZgtOMJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_list = [2, 3, 4, 1, 10]\n",
+        "max(numeros_list)"
+      ],
+      "metadata": {
+        "id": "eGEcm2OVtQGC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Métodos"
       ],
       "metadata": {
@@ -558,53 +737,6 @@
       "source": [
         "# help(frutas_list)"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### len\n",
-        "\n",
-        "Regresa el número de elementos que existen en la lista."
-      ],
-      "metadata": {
-        "id": "Tq7f-sjLfo9V"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "frutas_list = [\"mango\", \"durazno\", \"mamey\", \"melón\"]\n",
-        "len(frutas_list)"
-      ],
-      "metadata": {
-        "id": "oSjchKwrftQF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeros_lista = [1, 2, 3, 4, 5, 6]\n",
-        "len(numeros_lista)"
-      ],
-      "metadata": {
-        "id": "utMpK4otf1Qj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "vacio_lista = []\n",
-        "len(vacio_lista)"
-      ],
-      "metadata": {
-        "id": "fBZ9jQOMf7US"
-      },
       "execution_count": null,
       "outputs": []
     },
@@ -880,57 +1012,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Funciones"
-      ],
-      "metadata": {
-        "id": "_dImwniSsny9"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### sum"
-      ],
-      "metadata": {
-        "id": "HnuVlkswtJAX"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeros_list = [2, 3, 4, 1, 10]\n",
-        "sum(numeros_list)"
-      ],
-      "metadata": {
-        "id": "vVXlAnT9tK7W"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### max"
-      ],
-      "metadata": {
-        "id": "RRKLxtZgtOMJ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeros_list = [2, 3, 4, 1, 10]\n",
-        "max(numeros_list)"
-      ],
-      "metadata": {
-        "id": "eGEcm2OVtQGC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "yEiqOM30MZBp"
       },
@@ -1060,13 +1141,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Los operadores de pertenencia se utilizan para comprobar si un valor o variable se encuentran en una secuencia (list, tuple, dict, set o str).\n",
-        "\n",
-        "\n",
-        "in Devuelve True si el valor se encuentra en una secuencia; False en caso contrario.<br>\n",
-        "not int\n",
-        "\n",
-        "Devuelve True si el valor se encuentra en una secuencia; False en caso contrario."
+        "Los operadores de pertenencia se utilizan para comprobar si un valor o variable se encuentran en una secuencia (list, tuple, dict, set o str).\n"
       ],
       "metadata": {
         "id": "VV0Wy-8Ih9ji"
@@ -1084,17 +1159,58 @@
         "\n",
         "df = pd.DataFrame(columns=['Operador', 'Descripción', 'Ejemplo'],\n",
         "             index=[1, 2],\n",
-        "             data=[['in', 'True SI el item esta contenido en la secuencia \\n False si NO esta contenido', '\"a\" in \"planeta\" == True \\n \"a\" in \"universo\" == False'],\n",
-        "                   ['not in', 'True si el item NO se encuentra en la secuencia \\n True SI esta contenido', '\"a\" in \"planeta\" == False \\n \"a\" in \"universo\" == True']])\n",
+        "             data=[['in', 'Regresa True SI el item esta contenido en la secuencia \\n False si NO esta contenido', '\"a\" in \"planeta\" == True \\n \"a\" in \"universo\" == False'],\n",
+        "                   ['not in', 'Regresa True si el item NO se encuentra en la secuencia \\n True SI esta contenido', '\"a\" in \"planeta\" == False \\n \"a\" in \"universo\" == True']])\n",
         "                   \n",
         "\n",
         "pretty_print(df)"
       ],
       "metadata": {
-        "id": "CK5Q5klO_9aF"
+        "id": "CK5Q5klO_9aF",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 286
+        },
+        "outputId": "d4c62fc7-54f1-4c79-8647-f4e1f73e94fe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Operador</th>\n",
+              "      <th>Descripción</th>\n",
+              "      <th>Ejemplo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>in</td>\n",
+              "      <td>Regresa True SI el item esta contenido en la secuencia <br> False si NO esta contenido</td>\n",
+              "      <td>\"a\" in \"planeta\" == True <br> \"a\" in \"universo\" == False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>not in</td>\n",
+              "      <td>Regresa True si el item NO se encuentra en la secuencia <br> True SI esta contenido</td>\n",
+              "      <td>\"a\" in \"planeta\" == False <br> \"a\" in \"universo\" == True</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
