--- a/Ejercicios/Ejercicio: Listas.ipynb
+++ b/Ejercicios/Ejercicio: Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPy4jzFlEksELNne5Ju/VTw",
+      "authorship_tag": "ABX9TyMiHCRTN1oJFHonaH1zDE2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "source": [
         "1. Redes sociales\n",
         "> a) Crea una lista con el nombre de 5 redes sociales.<br> \n",
-        "b) Ordena la lista\n",
+        "b) Ordena la lista <br>\n",
         "c) Imprime la lista"
       ],
       "metadata": {
@@ -84,7 +84,7 @@
         "3. Planetas <br>\n",
         "a) Convierte el siguiente string `\"Marte|Venus|Tierra|Júpiter|Saturno\"` en una lista. Usa el método split <br>\n",
         "b) Ordena la lista <br>\n",
-        "c) Crea un algoritmo para revisar si un planeta dado es gaseoso o rocos. <br>\n",
+        "c) Crea un algoritmo para revisar si un planeta dado es gaseoso o roco. <br>\n",
         ">Los planetas **rocosos** son: Mercurio, Venus, La Tierra y Marte. Los planetas **gaseosos** son: Júpiter, Saturno, Urano y Neptuno "
       ],
       "metadata": {
