--- a/Ejercicios/Ejercicio: Listas.ipynb
+++ b/Ejercicios/Ejercicio: Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiHCRTN1oJFHonaH1zDE2S",
+      "authorship_tag": "ABX9TyOqOoGrJlC7DFTylIxTdg2h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,8 +38,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Redes sociales\n",
-        "> a) Crea una lista con el nombre de 5 redes sociales.<br> \n",
+        "1. Redes sociales <br>\n",
+        "a) Crea una lista con el nombre de 5 redes sociales.<br> \n",
         "b) Ordena la lista <br>\n",
         "c) Imprime la lista"
       ],
@@ -134,7 +134,7 @@
       "cell_type": "markdown",
       "source": [
         "5. Calificaciones\n",
-        "> a) Crear una lista de números flotantes: 1.67, 1.67, 1.62, 0.5, 1.45, 6.05, 7.64, 7.23, 4.44, 7.63, 4.54, 5.55, 6.87, 4.3, 4.23, 8.34, 8.88, 9.95, 9.86, 8.56<br>\n",
+        "> a) Crear una lista con los siguientes números flotantes: <br> 1.67, 1.67, 1.62, 0.5, 1.45, 6.05, 7.64, 7.23, 4.44, 7.63, 4.54, 5.55, 6.87, 4.3, 4.23, 8.34, 8.88, 9.95, 9.86, 8.56 <br>\n",
         "b) Obtén el promedio redondeado a dos dígitos"
       ],
       "metadata": {
