--- a/5. Bucles.ipynb
+++ b/5. Bucles.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNiw8PysREl3Xrx9vDNUeXp",
+      "authorship_tag": "ABX9TyPFfSctdIvyVBbgqtdZVST6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/5. Bucles.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/5.%20Bucles.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -209,6 +208,18 @@
       ],
       "metadata": {
         "id": "NhWI_Ih-xnOK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "planeta = planetas_lista.__next__()\n",
+        "print(planeta)"
+      ],
+      "metadata": {
+        "id": "Vz-mouMu-vpj"
       },
       "execution_count": null,
       "outputs": []
@@ -417,7 +428,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +452,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +480,7 @@
       "source": [
         "palabra = \"Electroencefalograma\""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -480,19 +491,32 @@
       "metadata": {
         "id": "KoURz9nJ0nw0"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "palabra_iter.__next__()"
+        "letra = palabra_iter.__next__()\n",
+        "print(letra)"
       ],
       "metadata": {
-        "id": "MymUcpDq0qzz"
+        "id": "MymUcpDq0qzz",
+        "outputId": "db41f7de-ab7c-485c-9abe-b5da8d89930e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "e\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -501,10 +525,66 @@
         "  print(letra)"
       ],
       "metadata": {
-        "id": "b3eTiLep04e4"
+        "id": "b3eTiLep04e4",
+        "outputId": "b83c127f-3192-4b1d-8cad-f4ef99e04c02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "E\n",
+            "l\n",
+            "e\n",
+            "c\n",
+            "t\n",
+            "r\n",
+            "o\n",
+            "e\n",
+            "n\n",
+            "c\n",
+            "e\n",
+            "f\n",
+            "a\n",
+            "l\n",
+            "o\n",
+            "g\n",
+            "r\n",
+            "a\n",
+            "m\n",
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(\"Electroencefalograma\")\n",
+        "max(palabra)\n",
+        "print(sorted(palabra))"
+      ],
+      "metadata": {
+        "id": "cwkPnE70Id8j",
+        "outputId": "c4069f0f-2539-4820-9b66-3ceb2dd463cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['E', 'a', 'a', 'a', 'c', 'c', 'e', 'e', 'e', 'f', 'g', 'l', 'l', 'm', 'n', 'o', 'o', 'r', 'r', 't']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -519,15 +599,42 @@
     {
       "cell_type": "code",
       "source": [
-        "len(\"Electroencefalograma\")\n",
-        "max(palabra)\n",
-        "print(sorted(palabra))"
+        "count = 0\n",
+        "for i in range(10):\n",
+        "  count += 1\n",
+        "\n",
+        "print(f'Conteo final: {count}')"
       ],
       "metadata": {
-        "id": "cwkPnE70Id8j"
+        "id": "oZLNbt7j_J6z",
+        "outputId": "4c9c41d2-2ce9-4033-8eae-acd93838359a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conteo final: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entonces usando la estructura anterior, desarrolla los siguientes ejercicios:\n",
+        "\n",
+        "a) Usando un **ciclo for** encuentra la suma de los primeros 100 números, esto es: <br> \n",
+        "1 + 2 + 3 + 4 + 5 + 6 … hasta llegar a 100\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zW-f2UH0_hEp"
+      }
     },
     {
       "cell_type": "markdown",
@@ -590,6 +697,91 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "También puede ser utilizado para mantener instrucciones activas, como un programa computacional.\n"
+      ],
+      "metadata": {
+        "id": "pg_FlSiHJ6HY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "round(3.1416 * 0.1 ** 2)"
+      ],
+      "metadata": {
+        "id": "CLAnoaYTK8aD",
+        "outputId": "e834108b-7705-4fce-f0bc-7e0c62de2eca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "area = 1\n",
+        "print(f'Escribe 0 para salir del programa')\n",
+        "while area > 0:\n",
+        "  radio = float(input('Ingresa el radio del circulo: '))\n",
+        "  area = round(3.1416 * radio ** 2)\n",
+        "  if area > 0:\n",
+        "    print(f'El area del circulo es: {area} \\n')\n",
+        "  else:\n",
+        "    print(f'\\nFinalizando el programa')\n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "ZofwJFfAJwNC",
+        "outputId": "385ffe83-b8e0-4f71-afa2-cc8b3ce4c1d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe 0 para salir del programa\n",
+            "Ingresa el radio del circulo: 12\n",
+            "El area del circulo es: 452 \n",
+            "\n",
+            "Ingresa el radio del circulo: 3\n",
+            "El area del circulo es: 28 \n",
+            "\n",
+            "Ingresa el radio del circulo: 345\n",
+            "El area del circulo es: 373929 \n",
+            "\n",
+            "Ingresa el radio del circulo: -1\n",
+            "El area del circulo es: 3 \n",
+            "\n",
+            "Ingresa el radio del circulo: 123\n",
+            "El area del circulo es: 47529 \n",
+            "\n",
+            "Ingresa el radio del circulo: 0\n",
+            "Finalizando el programa\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
