--- a/5. Bucles.ipynb
+++ b/5. Bucles.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPFfSctdIvyVBbgqtdZVST6",
+      "authorship_tag": "ABX9TyPoremvhlGXoWQH9ekd/YEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,7 +480,7 @@
       "source": [
         "palabra = \"Electroencefalograma\""
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
       "metadata": {
         "id": "KoURz9nJ0nw0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +531,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,6 +782,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**La Conjetura de collatz**\n",
+        "\n",
+        "[Conjetura de Collatz](https://www.youtube.com/watch?v=q_dvxXc7d2Y)"
+      ],
+      "metadata": {
+        "id": "-MCeVDfkkphK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ds55DxAZkpF2"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
