--- a/5. Bucles.ipynb
+++ b/5. Bucles.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPoremvhlGXoWQH9ekd/YEy",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO9/jVlcgrdjd/vlwPykGs+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -589,6 +590,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "z3gFeBgwI-P3"
+      },
+      "source": [
+        "# Extras"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "N7ulGM2KJD_N"
       },
       "source": [
@@ -624,8 +634,28 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pg1MYVTvJCt4"
+      },
+      "source": [
+        "# Cuántas letras tiene \"Electroencefalograma\"\n",
+        "\n",
+        "palabra = \"Electroencefalograma\"\n",
+        "# count = 0\n",
+        "no_de_iteracion = 1\n",
+        "\n",
+        "for letra in palabra:\n",
+        "  print('count: ', no_de_iteracion, 'letra: ', letra)\n",
+        "  no_de_iteracion += 1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
+        "## Suma de Gauss\n",
         "Entonces usando la estructura anterior, desarrolla los siguientes ejercicios:\n",
         "\n",
         "a) Usando un **ciclo for** encuentra la suma de los primeros 100 números, esto es: <br> \n",
@@ -786,50 +816,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**La Conjetura de collatz**\n",
+        "### La Conjetura de collatz\n",
         "\n",
         "[Conjetura de Collatz](https://www.youtube.com/watch?v=q_dvxXc7d2Y)"
       ],
       "metadata": {
         "id": "-MCeVDfkkphK"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ds55DxAZkpF2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "z3gFeBgwI-P3"
-      },
-      "source": [
-        "# Extras"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pg1MYVTvJCt4"
-      },
-      "source": [
-        "# Cuántas letras tiene \"Electroencefalograma\"\n",
-        "\n",
-        "palabra = \"Electroencefalograma\"\n",
-        "# count = 0\n",
-        "no_de_iteracion = 1\n",
-        "\n",
-        "for letra in palabra:\n",
-        "  print('count: ', no_de_iteracion, 'letra: ', letra)\n",
-        "  no_de_iteracion += 1"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1135,6 +1128,16 @@
       ],
       "metadata": {
         "id": "_LOpWCJe3U5N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conjetura de Collatz\n",
+        "Implementar el algoritmo para obtener el máximo valor granizo para los primeros 100 números"
+      ],
+      "metadata": {
+        "id": "9RovNl3WE-Ot"
       }
     },
     {
