--- a/Ejercicios/Ejercicio: bucles.ipynb
+++ b/Ejercicios/Ejercicio: bucles.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaSpwBqsOGky0JryWiOxXH",
+      "authorship_tag": "ABX9TyNmPlHwheHqvu2I5TXCFP+A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,7 +131,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "count = 10\n",
+        "print('@')\n",
+        "for i in range(1, 9):\n",
+        "  count -= 1\n",
+        "  if i >= 2 and i <= 5:\n",
+        "    print('+' * i)\n",
+        "\n",
+        "  elif i > 5:\n",
+        "    print('+' * count)\n",
+        "  \n",
+        "\n",
+        "print('@')"
+      ],
       "metadata": {
         "id": "J9l26dvNIlHN"
       },
@@ -152,9 +165,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numeros_list = [\n",
+        "    10,-10.0, 49.6, 11.8, -1.5, -33.3, -40.4, 51.6, 82.1, 46.8, 60.8, -88.6,\n",
+        "    -35.7, -63.7, -51.5, -48.6, 18.6, -97.9, 67.8, -14.9, -38.8, -99.1, 16.7,\n",
+        "    -84.7, 30.5, -29.4, -13.2, -93.1, 1.3, 17.2, -72.7, 56.9, 90.0, -73.8,\n",
+        "    -87.4, -37.6, -94.3, -63.1, 57.8, -26.3, -5.3, 81.0, 31.1, -2.3, -39.5,\n",
+        "    30.6, 24.5, -84.9, 47.7, 19.4, -87.2, 99.3, 54.1, -28.2, -71.2, 84.7, \n",
+        "    -83.3, -67.7, 86.7, -52.5, 56.0, 83.3, 49.0, -97.3, 2.6, 80.8, -55.2, \n",
+        "    -68.7, 58.8, 42.1, 2.2, 6.7, 82.6, 19.3, 47.3, 40.2, 25.3, 92.3, 64.5,\n",
+        "    34.3, -83.5, -25.1, -44.4, 50.4, -99.3, -38.4, -68.1, -8.7, -35.8, 40.6,\n",
+        "    -67.2, -75.6, 77.8, 53.9, -60.4, -88.2, -61.8, -16.3, 78.6, 73.5, 49.8\n",
+        "]\n"
+      ],
       "metadata": {
         "id": "VPeX3H-sChed"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(numeros_list)"
+      ],
+      "metadata": {
+        "id": "AXa0MK0LvxvN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min(numeros_list)"
+      ],
+      "metadata": {
+        "id": "eCdzBEjZznPC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "maximo = None\n",
+        "minimo = None\n",
+        "for n in numeros_list:\n",
+        "  if not maximo:\n",
+        "    maximo = n\n",
+        "\n",
+        "  if not minimo:\n",
+        "    minimo = n\n",
+        "  \n",
+        "  if maximo < n:\n",
+        "    maximo = n\n",
+        "\n",
+        "  if minimo > n:\n",
+        "    minimo = n\n",
+        "  \n",
+        "print(maximo)\n",
+        "print(minimo)"
+      ],
+      "metadata": {
+        "id": "Bg5U1oBSuX-g"
       },
       "execution_count": null,
       "outputs": []
@@ -206,21 +280,23 @@
       "source": [
         "7. Procesamiento de lenguaje natural\n",
         "\n",
-        "a) Usando un ciclo for, encuentra el número de veces que se repite cada vocal usando el siguiente fragmento del libro de Drácula de Bram Stoker:\n",
+        "a) **Primer reto:** Usando un ciclo for, encuentra el número de veces que se repite cada vocal usando el siguiente fragmento del libro de Drácula de Bram Stoker:\n",
         "<br><br>\n",
         "\n",
         "8 de mayo. Cuando comencé a escribir este libro temí que me estuviese explayando demasiado; pero ahora me complace haber entrado en detalle desde un principio, pues hay algo tan extraño acerca de este lugar y de todas las cosas que suceden, que no puedo sino sentirme inquieto. <br> Desearía estar lejos de aquí, o jamás haber venido. Puede ser que esta extraña existencia de noche me esté afectando, ¡pero cómo desearía que eso fuese todo! <br>Si hubiese alguien con quien pudiera hablar creo que lo soportaría, pero no hay nadie. Sólo tengo al conde para hablar, ¡y él...! Temo ser la única alma viviente el lugar.\n",
-        "<br>\n",
+        "<br><br>\n",
         "**Recomendaciones:**\n",
         "- Usa el método **lower** para convertir todo a minúsculas\n",
         "- Usa el ciclo for para el conteo de las vocales. Crea una contador por vocal.\n",
         "- Usa condicionales\n",
         "- Usa los operadores de comparación\n",
+        "<br><br>\n",
         "\n",
-        "b) Como parte del preprocesamiento del texto, es necesario eliminar palabras stopwords, las cuales son palabras muy comúnes pero que aportan poco valor sobre la comprensión del texto. <br>\n",
+        "b) **Segundo reto:** Como parte del preprocesamiento del texto, es necesario eliminar palabras stopwords, las cuales son palabras muy comúnes pero que aportan poco valor sobre la comprensión del texto. <br>\n",
         "\n",
         "El reto consiste en eliminar las siguietnes palabras del texto: <br>\n",
         "`a, de, la, al, mucho, hubiese, con, lo, que, el`\n",
+        "<br><br>\n",
         "\n",
         "**Recomendaciones:**\n",
         "- Usa el método **lower** para convertir todo a minúsculas\n",
@@ -237,7 +313,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WtgotzWwHrkT"
+        "id": "4qI2TbOfFpYU"
       },
       "execution_count": null,
       "outputs": []
